// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > renders correctly with autoresize 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base resize-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="3"
      style=""
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with class 1`] = `
<div>
  <div
    class="inline-flex items-center absolute"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with disabled 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      disabled=""
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with id 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="id"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with rows 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="5"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size lg 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size md 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1.5 px-2.5 py-1.5 text-sm focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with size sm 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1 px-2 py-1 text-xs focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      rows="3"
    />
  </div>
</div>
`;

exports[`Textarea > renders correctly with ui 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <textarea
      class="w-full appearance-none border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset rounded-full"
      rows="3"
    />
  </div>
</div>
`;
